Add WidgetLCAUtil#renderProperty( Widget, String, Widget, Widget ). Changed WidgetLCAUtil#renderMenu to use the new method - bug 351945: Migrate widget LCAs to write JSON responses https://bugs.eclipse.org/bugs/show_bug.cgi?id=351945